added howitworks section with cards container and cards

--- a/allplasticworld/src/components/card/Card.module.css
+++ b/allplasticworld/src/components/card/Card.module.css
@@ -1,3 +1,14 @@
 .card_container {
-  @apply flex flex-col w-80 md:w-96 items-center justify-start gap-3 md:gap-6 bg-cardBg p-3 relative rounded-md max-h-96 min-h-80;
+  @apply flex flex-col w-80 md:h-96 md:w-96 items-center justify-start gap-3 md:gap-6 bg-cardBg p-3 relative rounded-md max-h-96;
+}
+.card_container .div {
+  @apply absolute inset-1/2 transform -translate-x-1/2 -translate-y-1/2 p-5 bg-brightBlue rounded-full flex items-center justify-center;
+}
+.card_container .div_green {
+  @apply absolute inset-1/2 transform -translate-x-1/2 -translate-y-1/2 p-5 bg-emerald-500 rounded-full flex items-center justify-center;
+}
+
+.img_position {
+  @apply absolute inset-1/2;
+  transform: translateY(-55%) translateX(-50%);
 }/*# sourceMappingURL=Card.module.css.map */
