--- a/allplasticworld/src/ui/about/About.module.css
+++ b/allplasticworld/src/ui/about/About.module.css
@@ -1,3 +1,3 @@
 .about_wrapper {
-  @apply flex flex-col md:flex-row justify-around items-center;
+  @apply flex flex-col-reverse md:flex-row justify-around items-center;
 }/*# sourceMappingURL=About.module.css.map */
