added fetch for progress bar, added API functions to the app

--- a/allplasticworld/src/components/progressbar/Progressbar.module.css
+++ b/allplasticworld/src/components/progressbar/Progressbar.module.css
@@ -3,8 +3,7 @@
 }
 
 .progrees_filer {
-  @apply flex items-center justify-end h-full bg-emerald-500 text-center;
-  transition: "width 1s ease-in-out";
+  @apply flex items-center justify-start h-full bg-emerald-500 text-center;
   border-radius: inherit;
 }
 
