--- a/allplasticworld/src/components/animations/plasticsitems/Plastiitems.module.scss
+++ b/allplasticworld/src/components/animations/plasticsitems/Plastiitems.module.scss
@@ -1,21 +1,24 @@
 .plastic_item {
     @apply absolute block w-2 h-2 md:w-4 md:h-2 bg-slate-200 rounded-sm;
-    animation: fadeout 10s linear 0s infinite normal forwards;
+    animation: fadeout 10s linear infinite normal forwards;
 }
 
 @keyframes fadeout {
     0% {
-        opacity: 1;
+        opacity: 0;
         transform: translateY(0) translateX(20px) rotate(0deg);
     }
 
     25% {
+        opacity: 1;
         transform: translateY(90px) translateX(50px) rotate(160deg);
     }
     50% {
+        opacity: 1;
         transform: translateY(90px) translateX(130px) rotate(380deg);
     }
     75% {
+        opacity: 1;
         transform: translateY(150px) translateX(165px) rotate(380deg);
     }
     100% {
@@ -27,11 +30,12 @@
 @media (min-width: 490px) {
     @keyframes fadeout {
         0% {
-            opacity: 1;
+            opacity: 0;
             transform: translateY(0) translateX(20px) rotate(0deg);
         }
 
         25% {
+            opacity: 1;
             transform: translateY(90px) translateX(50px) rotate(160deg);
         }
         50% {
@@ -73,22 +77,25 @@
 @media (min-width: 1024px) {
     @keyframes fadeout {
         0% {
-            opacity: 1;
-            transform: translateY(0) rotate(0deg);
+            opacity: 0;
+            transform: translateY(0) translateX(20px) rotate(0deg);
         }
 
         25% {
-            transform: translateY(175px) translateX(70px) rotate(160deg);
+            opacity: 1;
+            transform: translateY(175px) translateX(100px) rotate(160deg);
         }
         50% {
+            opacity: 1;
             transform: translateY(180px) translateX(350px) rotate(380deg);
         }
         75% {
-            transform: translateY(250px) translateX(400px) rotate(380deg);
+            opacity: 1;
+            transform: translateY(250px) translateX(520px) rotate(380deg);
         }
         100% {
             opacity: 0;
-            transform: translateY(250px) translateX(400px) rotate(380deg);
+            transform: translateY(250px) translateX(500px) rotate(380deg);
         }
     }
 }
@@ -96,22 +103,25 @@
 @media (min-width: 1420px) {
     @keyframes fadeout {
         0% {
-            opacity: 1;
+            opacity: 0;
             transform: translateY(0) rotate(0deg);
         }
 
         25% {
-            transform: translateY(175px) translateX(70px) rotate(160deg);
+            opacity: 1;
+            transform: translateY(195px) translateX(100px) rotate(160deg);
         }
         50% {
-            transform: translateY(180px) translateX(500px) rotate(380deg);
+            opacity: 1;
+            transform: translateY(195px) translateX(580px) rotate(380deg);
         }
         75% {
-            transform: translateY(250px) translateX(610px) rotate(380deg);
+            opacity: 1;
+            transform: translateY(250px) translateX(680px) rotate(380deg);
         }
         100% {
             opacity: 0;
-            transform: translateY(250px) translateX(610px) rotate(380deg);
+            transform: translateY(250px) translateX(680px) rotate(380deg);
         }
     }
 }
