--- a/allplasticworld/src/ui/animation/Animation.module.css
+++ b/allplasticworld/src/ui/animation/Animation.module.css
@@ -1,8 +1,30 @@
 .sorted_plate {
-  @apply p-4 md:p-4 border-2 rounded-lg h-5 w-1/3 flex justify-between items-center border-double lg:w-1/3 outline-dashed outline-sky-400 outline-2 absolute;
-  animation: changeBorderColor 5s linear infinite;
+  @apply p-4 md:p-4 border-2 rounded-lg h-5 w-1/3 flex justify-between items-center border-double lg:w-1/3 absolute;
   right: 30%;
   bottom: 15%;
+}
+
+.plastic_item {
+  @apply block w-2 h-2 md:w-4 md:h-2 bg-slate-200 rounded-sm;
+  animation: rotateBorder 5s linear infinite;
+}
+.plastic_item:first-child {
+  @apply mt-5;
+}
+.plastic_item:nth-child(2) {
+  @apply mt-2;
+}
+.plastic_item:nth-child(6) {
+  @apply mt-1;
+}
+.plastic_item:nth-child(7) {
+  @apply mt-4;
+}
+
+.plastic_item_group {
+  @apply flex flex-row gap-1 absolute;
+  left: 20%;
+  top: -2%;
 }
 
 .sorted_div {
@@ -47,7 +69,7 @@
 }
 
 .progress_bar_container {
-  @apply w-full bg-transparent rounded-2xl border border-brightBlue;
+  @apply w-full bg-transparent rounded-2xl border border-brightBlue  ml-1 mr-1;
   height: inherit;
 }
 
@@ -61,4 +83,12 @@
   font-size: 9px;
   line-height: 10px;
   padding: 0;
+}
+
+@media (min-width: 1024px) {
+  .plastic_item_group {
+    @apply flex flex-row gap-1 absolute;
+    left: 18%;
+    top: -2%;
+  }
 }/*# sourceMappingURL=Animation.module.css.map */
