--- a/allplasticworld/src/components/animations/plasticsitems/Plastiitems.module.scss
+++ b/allplasticworld/src/components/animations/plasticsitems/Plastiitems.module.scss
@@ -1,52 +1,52 @@
 .plastic_item {
-    @apply absolute block w-2 h-2 md:w-4 md:h-2 bg-slate-200 rounded-sm;
+    @apply absolute block w-2 h-2 md:w-4 md:h-2 bg-slate-200 rounded-sm opacity-0;
     animation: fadeout 10s linear infinite normal forwards;
 }
 
 @keyframes fadeout {
     0% {
-        opacity: 0;
+        opacity: 1;
         transform: translateY(0) translateX(20px) rotate(0deg);
     }
 
     25% {
         opacity: 1;
-        transform: translateY(90px) translateX(50px) rotate(160deg);
+        transform: translateY(112px) translateX(77px) rotate(160deg);
     }
     50% {
         opacity: 1;
-        transform: translateY(90px) translateX(130px) rotate(380deg);
+        transform: translateY(112px) translateX(135px) rotate(380deg);
     }
     75% {
-        opacity: 1;
-        transform: translateY(150px) translateX(165px) rotate(380deg);
+        transform: translateY(165px) translateX(175px) rotate(380deg);
     }
     100% {
         opacity: 0;
-        transform: translateY(150px) translateX(165px) rotate(380deg);
+        transform: translateY(165px) translateX(175px) rotate(380deg);
     }
 }
 
-@media (min-width: 490px) {
+@media (min-width: 576px) {
     @keyframes fadeout {
         0% {
-            opacity: 0;
-            transform: translateY(0) translateX(20px) rotate(0deg);
+            opacity: 1;
+            transform: translateY(0) translateX(17px) rotate(0deg);
         }
 
         25% {
             opacity: 1;
-            transform: translateY(90px) translateX(50px) rotate(160deg);
+            transform: translateY(105px) translateX(50px) rotate(160deg);
         }
         50% {
-            transform: translateY(90px) translateX(170px) rotate(380deg);
+            opacity: 1;
+            transform: translateY(105px) translateX(210px) rotate(380deg);
         }
         75% {
-            transform: translateY(150px) translateX(180px) rotate(380deg);
+            transform: translateY(150px) translateX(260px) rotate(380deg);
         }
         100% {
             opacity: 0;
-            transform: translateY(150px) translateX(190px) rotate(380deg);
+            transform: translateY(150px) translateX(260px) rotate(380deg);
         }
     }
 }
@@ -55,26 +55,28 @@
     @keyframes fadeout {
         0% {
             opacity: 1;
-            transform: translateY(0) rotate(0deg);
+            transform: translateY(10px) translateX(30px) rotate(0deg);
         }
 
         25% {
-            transform: translateY(140px) translateX(50px) rotate(160deg);
+            opacity: 1;
+            transform: translateY(155px) translateX(70px) rotate(160deg);
         }
         50% {
-            transform: translateY(140px) translateX(260px) rotate(380deg);
+            opacity: 1;
+            transform: translateY(155px) translateX(290px) rotate(380deg);
         }
         75% {
-            transform: translateY(200px) translateX(280px) rotate(380deg);
+            transform: translateY(200px) translateX(340px) rotate(380deg);
         }
         100% {
             opacity: 0;
-            transform: translateY(200px) translateX(280px) rotate(380deg);
+            transform: translateY(200px) translateX(340px) rotate(380deg);
         }
     }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 992px) {
     @keyframes fadeout {
         0% {
             opacity: 0;
@@ -83,19 +85,44 @@
 
         25% {
             opacity: 1;
-            transform: translateY(175px) translateX(100px) rotate(160deg);
+            transform: translateY(150px) translateX(100px) rotate(160deg);
         }
         50% {
             opacity: 1;
-            transform: translateY(180px) translateX(350px) rotate(380deg);
+            transform: translateY(150px) translateX(290px) rotate(380deg);
         }
         75% {
-            opacity: 1;
-            transform: translateY(250px) translateX(520px) rotate(380deg);
+            transform: translateY(200px) translateX(330px) rotate(380deg);
         }
         100% {
             opacity: 0;
-            transform: translateY(250px) translateX(500px) rotate(380deg);
+            transform: translateY(200px) translateX(330px) rotate(380deg);
+        }
+    }
+}
+
+@media (min-width: 1200px) {
+    @keyframes fadeout {
+        0% {
+            opacity: 0;
+            transform: translateY(0) translateX(10px) rotate(0deg);
+        }
+
+        25% {
+            opacity: 1;
+            transform: translateY(185px) translateX(150px) rotate(160deg);
+        }
+        50% {
+            opacity: 1;
+            transform: translateY(185px) translateX(380px) rotate(380deg);
+        }
+        75% {
+            opacity: 1;
+            transform: translateY(250px) translateX(440px) rotate(380deg);
+        }
+        100% {
+            opacity: 0;
+            transform: translateY(250px) translateX(440px) rotate(380deg);
         }
     }
 }
@@ -109,19 +136,19 @@
 
         25% {
             opacity: 1;
-            transform: translateY(195px) translateX(100px) rotate(160deg);
+            transform: translateY(185px) translateX(100px) rotate(160deg);
         }
         50% {
             opacity: 1;
-            transform: translateY(195px) translateX(580px) rotate(380deg);
+            transform: translateY(185px) translateX(480px) rotate(380deg);
         }
         75% {
             opacity: 1;
-            transform: translateY(250px) translateX(680px) rotate(380deg);
+            transform: translateY(250px) translateX(600px) rotate(380deg);
         }
         100% {
             opacity: 0;
-            transform: translateY(250px) translateX(680px) rotate(380deg);
+            transform: translateY(250px) translateX(600px) rotate(380deg);
         }
     }
 }
