--- a/allplasticworld/src/ui/animation/Animation.module.css
+++ b/allplasticworld/src/ui/animation/Animation.module.css
@@ -23,7 +23,7 @@
 
 .plastic_item_group {
   @apply flex flex-row gap-1 absolute;
-  left: 14%;
+  left: 15%;
   top: -2%;
 }
 
@@ -130,6 +130,7 @@
     @apply mt-4;
   }
   .recycle_bin {
+    @apply w-48 h-14;
     right: 8%;
   }
   .count {
@@ -139,7 +140,7 @@
 }
 @media (min-width: 992px) {
   .plastic_item_group {
-    left: 15%;
+    left: 18%;
     top: -2%;
   }
   .sorted_plate {
@@ -148,17 +149,32 @@
   .sorted_div {
     @apply w-5;
   }
+  .recycle_bin {
+    @apply w-52 h-16;
+    right: 8%;
+  }
 }
 @media (min-width: 1200px) {
   .plastic_item_group {
     left: 18%;
     top: -2%;
   }
+  .recycle_bin {
+    @apply w-60 h-16;
+    right: 8%;
+  }
 }
 @media (min-width: 1420px) {
   .plastic_item_group {
     @apply flex flex-row gap-1 absolute;
-    left: 19%;
+    left: 20%;
+    top: -2%;
+  }
+}
+@media (min-width: 1620px) {
+  .plastic_item_group {
+    @apply flex flex-row gap-1 absolute;
+    left: 20%;
     top: -2%;
   }
 }
